update hiệu năng